kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: art
  labels:
    app: art
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      pod: art-container
  template:
    metadata:
      labels:
        pod: art-container
    spec:
      containers:
        - name: art-web
          image: ghcr.io/vitaliy-pvs/art:latest
          ports:
            - containerPort: 80
